tests/custom-4.1.7/noncompliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-4.1.7-noncompliant
policies:
  - ../../../kyverno-policies/custom-4.1.7.yaml
resources:
  - role.yaml
results:
  - policy: custom-4-1-7-cluster-access-manager
    rule: check-cluster-access-manager
    resources:
      - noncompliant-role
    kind: Role
    result: fail
